--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,11 @@ buildscript {
     ext.kotlin_version = "1.4.21"
     ext.dagger_version = "2.27"
     ext.glide_version = "4.11.0"
-    ext.lifecycle_version = '2.2.0-alpha03'
+    ext.lifecycle_version = '2.2.0'
+    ext.retrofit_version = "2.7.0"
+    ext.rxjava_version = '2.2.12'
+    ext.rxcalladapter_version = '2.6.0'
+    ext.reactivestreams_version = "1.1.1"
     repositories {
         google()
         jcenter()
