--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     ext.rxjava_version = '2.2.12'
     ext.rxcalladapter_version = '2.6.0'
     ext.reactivestreams_version = "1.1.1"
+    ext.nav_version = "2.3.3"
     repositories {
         google()
         jcenter()
